--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
 	"name": "ai-code-search-backend",
 	"version": "1.0.0",
 	"private": true,
+	"bin": {
+		"ai-code-search": "./cli.js"
+	},
 	"scripts": {
 		"dev": "tsx watch server.ts",
 		"build": "tsc -p tsconfig.server.json",
