Add Claude Agent SDK as alternative backend to cursor-agent
Support both cursor-agent and Claude Agent SDK for code search queries.
Auto-detects backend based on available credentials (ANTHROPIC_API_KEY for Claude, cursor-agent CLI for Cursor).
Adds configurable AGENT_BACKEND and CLAUDE_MODEL env vars.
Refactors codebase-list to support enhanced entries with name/description. Improves clone/pull to try sprint/master/main branches in order. Removes test.md fixture.

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,10 @@ PORT=8000
 # Command to run cursor-agent (optional, default "cursor-agent").
 # Use if you have cursor-agent installed under a different name or path.
 # CURSOR_AGENT_CMD=cursor-agent
+
+# Agent backend to use for code search: "cursor" or "claude" (optional).
+# When not set, auto-detects: uses "claude" if ANTHROPIC_API_KEY is set, otherwise "cursor" if cursor-agent is in PATH.
+# AGENT_BACKEND=claude
+
+# Claude model to use when AGENT_BACKEND=claude (optional, uses SDK default).
+# CLAUDE_MODEL=sonnet
