--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,17 @@ CODEBASE_LIST_PATH=/path/to/codebase-list.json
 # Port on which the web server will run (optional, default 8000).
 PORT=8000
 
-# Command to run cursor-agent (optional, default "cursor-agent").
-# Use if you have cursor-agent installed under a different name or path.
-# CURSOR_AGENT_CMD=cursor-agent
+# Agent type: "cursor" | "gemini" | "claude" (optional, default "cursor").
+# AGENT_TYPE=cursor
+
+# Command to run cursor-agent or Gemini CLI (optional).
+# For cursor: default "cursor-agent". For gemini: default "gemini".
+# Not used when AGENT_TYPE=claude (Claude Agent SDK runs in-process).
+# AGENT_CMD=cursor-agent
+
+# Model for the agent (optional). Used by all backends when set.
+# Cursor: --model value (default "auto"). Gemini: -m value. Claude: SDK model option.
+# AGENT_MODEL=claude-sonnet-4-20250514
+
+# When AGENT_TYPE=claude: set ANTHROPIC_API_KEY in your environment (required for Claude).
+# The Claude Agent SDK reads it automatically.
