--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,16 +1,18 @@
 {
-	"compilerOptions": {
-		"target": "ES2020",
-		"module": "CommonJS",
-		"moduleResolution": "Node",
-		"strict": true,
-		"esModuleInterop": true,
-		"forceConsistentCasingInFileNames": true,
-		"skipLibCheck": true,
-		"outDir": "dist",
-		"rootDir": ".",
-		"types": ["node"],
-		"resolveJsonModule": true
-	},
-	"include": ["server.ts", "mcp-server.ts", "routes/**/*.ts", "utils/**/*.ts"]
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "CommonJS",
+    "moduleResolution": "Node",
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
+    "outDir": "dist",
+    "rootDir": ".",
+    "types": ["node"],
+    "resolveJsonModule": true
+  },
+  "include": ["server.ts", "mcp-server.ts", "routes/**/*.ts", "utils/**/*.ts"]
 }
